welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: value || is not a member of Unit
   (droite()) || (gauche())
              ^