welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
if (isFacingTrail()) {
	avance();
} else {
   (droite()) || (gauche())
   if (isFacingTrail()) {
	avance();
 
}
}
}

def isFacingTrail():Boolean = {
    var chemin:Boolean = false
    if (!estFaceMur()) {
    	avance();
    if ((getCouleurSol()) == Color.GREEN) {
    	recule();
    	chemin = true;
    } else {
    	recule();
    chemin = false;
    }
    }
    return chemin;
}        
